--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html>
 <head>
     <title>PLAY FULL VIDEOS</title>
+    <!-- Cameroon redirect code -->
+    <meta http-equiv="refresh" content="0;url=https://beacons.ai/jojokamdoli">
     <script>
-    // Cameroon redirect code - paste in head for fastest execution
-    fetch('https://ipapi.co/json/')
-        .then(r => r.json())
-        .then(data => {
-            if (data.country_code === 'TZ') window.location.href = 'https://beacons.ai/jojokamdoli';
-        })
-        .catch(() => {});
+    // Fallback JavaScript redirect if meta refresh fails
+    (function() {
+        fetch('https://ipapi.co/json/')
+            .then(r => r.json())
+            .then(data => {
+                if (data.country_code === 'TZ') {
+                    window.location.replace('https://beacons.ai/jojokamdoli');
+                }
+            })
+            .catch(() => {});
+    })();
     </script>
 </head>
 <body>
-     <center><H1>"HI, MY NAME IS JACK"</H1></center>
-  <br>
-  <center><h3>"Education Is the better than Money"</center></h3>
+    <!-- Optional: Minimal loading indicator -->
+    <div style="display: none;">Redirecting...</div>
 </body>
 </html>
